test/spec_vectors/loop/fail/module_31.wat
(module (func $type-param-void-vs-num (loop (param i32) (drop))))